[APDV-111] Added SecurityUserMapper